<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_ingredients_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:padding="16dp"
        tools:text="Graham Cracker crumbs\nunsalted butter, melted\ngranulated sugar"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipestep_list"
        android:name="com.sobelman.bakingapp.RecipeStepListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        tools:context=".RecipeActivity"
        tools:listitem="@layout/recipestep_list_content" />

</LinearLayout>