package com.sobelman.bakingapp;

import android.support.test.espresso.contrib.RecyclerViewActions;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;

import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static org.hamcrest.Matchers.anyOf;

/**
 * UI test for main activity.
 */
@RunWith(AndroidJUnit4.class)
public class MainActivityTest {

    @Rule
    public ActivityTestRule<MainActivity> mMainActivityTestRule =
            new ActivityTestRule<>(MainActivity.class);


    // test whether clicking on an item in the the main recipe list opens the recipe
    // activity and displays the ingredient list
    @Test
    public void clickRecipeOpensRecipeActivity() {
        onView(anyOf(withId(R.id.rv_recipe_list), withId(R.id.rv_recipe_grid)))
                .perform(RecyclerViewActions.actionOnItemAtPosition(0, click()));
        onView(withId(R.id.tv_ingredients_list)).check(matches(isDisplayed()));
    }

    @Test
    public void clickRecipeClickStepOpensStep() {
        onView(anyOf(withId(R.id.rv_recipe_list), withId(R.id.rv_recipe_grid)))
                .perform(RecyclerViewActions.actionOnItemAtPosition(0, click()));
        onView(withId(R.id.recipestep_list))
                .perform(RecyclerViewActions.actionOnItemAtPosition(0, click()));
        onView(withId(R.id.recipe_video)).check(matches(isDisplayed()));
    }
}
